Add addUser POST route to api
